liurnia.bnf
<program> ::= <use_statements> <statements>

<use_statements> ::= <use_statement> | <use_statement> <use_statements>
<use_statement> ::= "use" <identifier> "from" <string> ";"

<statements> ::= <stmt> | <stmt> <statements>

<stmt> ::= <variable_decl>
         | <function_decl>
         | <struct_decl>
         | <expression_stmt>
         | <if_stmt>
         | <while_stmt>
         | <return_stmt>
         | <block_stmt>

<variable_decl> ::= "var" <identifier> ":" <type_annotation> ["=" <expr>] ";"
<function_decl> ::= "fn" <identifier> "(" [<parameters>] ")" <stmt>
<struct_decl> ::= "struct" <identifier> "{" <struct_fields> "}"
<expression_stmt> ::= <expr> ";"
<if_stmt> ::= "if" <expr> <stmt> ["else" <stmt>]
<while_stmt> ::= "while" <expr> <stmt>
<return_stmt> ::= "return" [<expr>] ";"
<block_stmt> ::= "{" <statements> "}"

<struct_fields> ::= <struct_field> | <struct_field> <struct_fields>
<struct_field> ::= <identifier> ":" <type_annotation> ["=" <expr>] ";"

<parameters> ::= <parameter> | <parameter> "," <parameters>
<parameter> ::= <identifier> ":" <type_annotation>

<type_annotation> ::= "Number"
                    | "String"
                    | "Bool"
                    | "Any"
                    | <identifier>

<expr> ::= <binary_expr>
         | <logical_expr>
         | <unary_expr>
         | <primary_expr>
         | <assignment_expr>
         | <call_expr>
         | <get_expr>
         | <set_expr>

<binary_expr> ::= <expr> <binary_operator> <expr>
<logical_expr> ::= <expr> <logical_operator> <expr>
<unary_expr> ::= <unary_operator> <expr>
<assignment_expr> ::= <identifier> "=" <expr>
<call_expr> ::= <expr> "(" [<arguments>] ")"
<get_expr> ::= <expr> "." <identifier>
<set_expr> ::= <expr> "." <identifier> "=" <expr>

<arguments> ::= <expr> | <expr> "," <arguments>

<primary_expr> ::= <number_literal>
                 | <string_literal>
                 | <boolean_literal>
                 | "nil"
                 | "this"
                 | "(" <expr> ")"

<binary_operator> ::= "+" | "-" | "/" | "*" | "%" | ">" | ">=" | "<" | "<=" | "!=" | "=="
<logical_operator> ::= "and" | "or"
<unary_operator> ::= "!" | "-"

<number_literal> ::= <float>
<string_literal> ::= "\"" <string_content> "\""
<boolean_literal> ::= "true" | "false"

<identifier> ::= <string>  ; Identifiers are typically strings but should adhere to variable naming conventions
<string> ::= (A-Za-z_)(A-Za-z0-9_)*
<float> ::= [0-9]+ ("." [0-9]+)?
<string_content> ::= any valid string content
