liurnia-frontend/src/parse_stmt.rs
use crate::ast::{Expr, Program, Stmt, UseStatement};
use crate::common::{expect_identifier, expect_string};
use crate::parser::Parser;
use crate::position::{Span, WithSpan};
use crate::token::TokenKind;

pub fn parse_program(parser: &mut Parser) -> Result<Program, ()> {
    let use_statements = parse_use_statements(parser)?;
    let statements = parse_declarations(parser)?;
    // println!("Use Statements: {:#?}", use_statements);
    // println!("Other Statements: {:#?}", statements);
    Ok(Program::Module(use_statements, statements))
}

fn parse_use_statements(parser: &mut Parser) -> Result<Vec<WithSpan<UseStatement>>, ()> {
    let mut use_statements = Vec::new();
    while parser.check(TokenKind::Use) {
        let begin_token = parser.expect(TokenKind::Use)?;
        let use_identifier = expect_identifier(parser)?;
        let _from_token = parser.expect(TokenKind::From)?;
        let from_string = expect_string(parser)?;
        let end_token = parser.expect(TokenKind::Semicolon)?;
        let use_stmt = Ok(WithSpan {
            value: UseStatement::Use(use_identifier, from_string),
            span: Span::union_span(begin_token.span, end_token.span),
        });
        use_statements.push(use_stmt?);
    }
    Ok(use_statements)
}

fn parse_declarations(parser: &mut Parser) -> Result<Vec<WithSpan<Stmt>>, ()> {
    let mut statements = Vec::new();
    while !parser.is_eof() {
        statements.push(parse_declaration(parser)?);
    }
    Ok(statements)
}

fn parse_declaration(parser: &mut Parser) -> Result<WithSpan<Stmt>, ()> {
    match parser.peek() {
        // TokenKind::Var => parse_var_declaration(parser)?,
        _ => parse_statement(parser),
    }
}

fn parse_expr(parser: &mut Parser) -> Result<WithSpan<Expr>, ()> {
    super::parse_expr::parse(parser)
}

fn parse_expr_statement(parser: &mut Parser) -> Result<WithSpan<Stmt>, ()> {
    let expr = parse_expr(parser)?;
    let end_token = parser.expect(TokenKind::Semicolon)?;

    let span = Span::union_span(expr.span, end_token.span);
    Ok(WithSpan::new(
        Stmt::ExpressionStatement(Box::new(expr)),
        span,
    ))
}

fn parse_statement(parser: &mut Parser) -> Result<WithSpan<Stmt>, ()> {
    match parser.peek() {
        TokenKind::Return => parse_return_statement(parser),
        TokenKind::If => parse_if_statement(parser),
        TokenKind::While => parse_while_statement(parser),
        // TokenKind::For => parse_for_statement(parser),
        TokenKind::LeftBrace => parse_block_statement(parser),
        TokenKind::Use => {
            parser.error(
                "Unexpected `use statement`. Imports can only happen at the start of the file.",
                parser.peek_token().span,
            );
            Err(())
        }
        _ => parse_expr_statement(parser),
    }
}

fn parse_while_statement(parser: &mut Parser) -> Result<WithSpan<Stmt>, ()> {
    let begin_token = parser.expect(TokenKind::While)?;
    parser.expect(TokenKind::LeftParen)?;
    let condition = parse_expr(parser)?;
    parser.expect(TokenKind::RightParen)?;
    let while_block = parse_block_statement(parser)?;
    let end_span = while_block.span;
    Ok(WithSpan::new(
        Stmt::WhileStatement(Box::new(condition), Box::new(while_block)),
        Span::union_span(begin_token.span, end_span),
    ))
}

fn parse_block_statement(parser: &mut Parser) -> Result<WithSpan<Stmt>, ()> {
    let begin_token = parser.expect(TokenKind::LeftBrace)?;
    let mut statements: Vec<WithSpan<Stmt>> = Vec::new();
    while !parser.check(TokenKind::RightBrace) {
        statements.push(parse_declaration(parser)?);
    }
    let end_token = parser.expect(TokenKind::RightBrace)?;
    Ok(WithSpan::new(
        Stmt::Block(statements),
        Span::union_span(begin_token.span, end_token.span),
    ))
}

fn parse_return_statement(parser: &mut Parser) -> Result<WithSpan<Stmt>, ()> {
    let begin_token = parser.expect(TokenKind::Return)?;
    let mut expr = None;
    if !parser.check(TokenKind::Semicolon) {
        expr = Some(parse_expr(parser)?);
    }
    let end_token = parser.expect(TokenKind::Semicolon)?;
    Ok(WithSpan::new(
        Stmt::ReturnStatement(expr.map(Box::new)),
        Span::union_span(begin_token.span, end_token.span),
    ))
}

fn parse_if_statement(parser: &mut Parser) -> Result<WithSpan<Stmt>, ()> {
    let begin_token = parser.expect(TokenKind::If)?;
    parser.expect(TokenKind::LeftParen)?;
    let condition = parse_expr(parser)?;
    parser.expect(TokenKind::RightParen)?;
    let if_body = parse_statement(parser)?;
    let mut end_span = if_body.span;
    let mut else_body: Option<WithSpan<Stmt>> = None;
    if parser.optionally(TokenKind::Else)? {
        let stmt = parse_statement(parser)?;
        end_span = stmt.span;
        else_body = Some(stmt);
    }
    Ok(WithSpan::new(
        Stmt::IfStatement(
            Box::new(condition),
            Box::new(if_body),
            else_body.map(Box::new),
        ),
        Span::union_span(begin_token.span, end_span),
    ))
}

#[cfg(test)]
mod tests {
    use crate::ast::{Expr, Stmt, UseStatement};
    use crate::parse_stmt::{parse_return_statement, parse_use_statements};
    use crate::parser::Parser;
    use crate::position::{Span, WithSpan};
    use crate::tokenizer::tokenize_with_context;

    #[test]
    fn test_use_stmt() {
        let tokens = tokenize_with_context("use add from \"add.li\";");
        let mut parser = Parser::new(&tokens);
        match parse_use_statements(&mut parser) {
            Ok(use_statements) => {
                assert_eq!(
                    use_statements,
                    vec![WithSpan {
                        value: UseStatement::Use(
                            WithSpan {
                                value: "add".to_string(),
                                span: Span::easy_span_create((1, 4), (1, 7))
                            },
                            WithSpan {
                                value: "add.li".to_string(),
                                span: Span::easy_span_create((1, 13), (1, 21))
                            }
                        ),
                        span: Span::easy_span_create((1, 0), (1, 22))
                    }]
                );
            }
            Err(_err) => {
                println!("{:?}", parser.diagnostics().to_vec())
            }
        }
    }
    #[test]
    fn test_multiple_use_stmts() {
        let tokens = tokenize_with_context(
            "use add from \"add.li\";\nuse subtract from \"subtract.li\";\nfun abc() {}",
        );
        let mut parser = Parser::new(&tokens);
        assert_eq!(
            parse_use_statements(&mut parser),
            Ok(vec![
                WithSpan {
                    value: UseStatement::Use(
                        WithSpan {
                            value: "add".to_string(),
                            span: Span::easy_span_create((1, 4), (1, 7))
                        },
                        WithSpan {
                            value: "add.li".to_string(),
                            span: Span::easy_span_create((1, 13), (1, 21))
                        }
                    ),
                    span: Span::easy_span_create((1, 0), (1, 22))
                },
                WithSpan {
                    value: UseStatement::Use(
                        WithSpan {
                            value: "subtract".to_string(),
                            span: Span::easy_span_create((2, 4), (2, 12))
                        },
                        WithSpan {
                            value: "subtract.li".to_string(),
                            span: Span::easy_span_create((2, 18), (2, 31))
                        }
                    ),
                    span: Span::easy_span_create((2, 0), (2, 32))
                }
            ])
        );
    }

    #[test]
    fn test_return_stmt() {
        let tokens = tokenize_with_context("return true;");
        let mut parser = Parser::new(&tokens);
        let result = parse_return_statement(&mut parser);
        // println!("{:?}", parser.diagnostics().to_vec());
        assert_eq!(
            result,
            Ok(WithSpan {
                value: Stmt::ReturnStatement(Option::from(Box::from(WithSpan {
                    value: Expr::BooleanLiteral(true),
                    span: Span::easy_span_create((1, 7), (1, 11))
                }))),
                span: Span::easy_span_create((1, 0), (1, 12)),
            })
        )
    }
}
